--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
             <form id="input-duration" action="">
                 <p>How long will it take to pay it off?</p>
                 <br>
-                <label for="">Loan Amount:</label>
-                <input type="range" id="loan-duration" name="" min="" max="" value="" step="">
+                <label for="loan-duration">Loan Amount:</label>
+                <span class="min-max-range">30.000 E</span>
+                <input type="range" id="loan-duration" name="loan-duration" min="30000" max="500000" value="30000" step="5000">
+                <span class="min-max-range">500.000 E</span>
                 <br>
-                <label for="">Interest:</label>
-                <input type="range" id="interest-dutarion" name="" min="" max="" value="" step="">
+                <label for="interest-dutarion">Interest (%) :</label>
+                <span class="min-max-range">1 %</span>
+                <input type="range" id="interest-dutarion" name="interest-dutarion" min="1" max="8" value="1" step="0.5">
+                <span class="min-max-range">8 %</span>
                 <br>
-                <label for="">Monthly payment:</label>
-                <input type="range" id="payment-duration" name="" min="" max="" value="" step="">
+                <label for="payment-duration">Monthly payment:</label>
+                <span class="min-max-range">100 E</span>
+                <input type="range" id="payment-duration" name="payment-duration" min="100" max="6000" value="100" step="100">
+                <span class="min-max-range">6000 E</span>
                 <br>
                 <button>Calculate</button>
             </form>
@@ -31,16 +37,22 @@
         <div id="mode-payment">
             <h3>Calculate Payment:</h3>
             <form id="input-payment" action="">
-                <p>How much will my monthly payment be?</p>
+                <p>How much will the monthly payment be?</p>
                 <br>
-                <label for="">Loan amount:</label>
-                <input type="range" id="loan-payment" name="" min="" max="" value="" step="">
+                <label for="loan-payment">Loan amount:</label>
+                <span class="min-max-range">30.000 E</span>
+                <input type="range" id="loan-payment" name="loan-payment" min="30000" max="500000" value="30000" step="5000">
+                <span class="min-max-range">500.000 E</span>
                 <br>
-                <label for="">Interest:</label>
-                <input type="range" id="interest-payment" name="" min="" max="" value="" step="">
+                <label for="interest-payment">Interest (%) :</label>
+                <span class="min-max-range">1 %</span>
+                <input type="range" id="interest-payment" name="interest-payment" min="1" max="8" value="1" step="0.5">
+                <span class="min-max-range">8 %</span>
                 <br>
-                <label for="">Duration:</label>
-                <input type="range" id="duration-payment" name="" min="" max="" value="" step="">
+                <label for="duration-payment">Duration (years) :</label>
+                <span class="min-max-range">5 years</span>
+                <input type="range" id="duration-payment" name="duration-payment" min="5" max="35" value="5" step="1">
+                <span class="min-max-range">35 years</span>
                 <br>
                 <button>Calculate</button>
             </form>
