--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
                 <br>
                 <label for="loan-duration">Loan Amount:</label>
                 <span class="min-max-range">30.000 E</span>
-                <input type="range" id="loan-duration" name="loan-duration" min="30000" max="500000" value="30000" step="5000">
+                <input type="range" id="loan-duration" name="loan-duration" min="30000" max="500000" value="30000" step="5000"><span id="current-loan-duration"></span>
                 <span class="min-max-range">500.000 E</span>
                 <br>
                 <label for="interest-dutarion">Interest (%) :</label>
                 <span class="min-max-range">1 %</span>
-                <input type="range" id="interest-dutarion" name="interest-dutarion" min="1" max="8" value="1" step="0.5">
+                <input type="range" id="interest-dutarion" name="interest-dutarion" min="1" max="8" value="1" step="0.5"><span id="current-interest-dutarion"></span>
                 <span class="min-max-range">8 %</span>
                 <br>
                 <label for="payment-duration">Monthly payment:</label>
                 <span class="min-max-range">100 E</span>
-                <input type="range" id="payment-duration" name="payment-duration" min="100" max="6000" value="100" step="100">
+                <input type="range" id="payment-duration" name="payment-duration" min="100" max="6000" value="100" step="100"><span id="current-payment-duration"></span>
                 <span class="min-max-range">6000 E</span>
                 <br>
                 <button>Calculate</button>
+                <span>Result:</span><input type="text">
             </form>
         </div>
         <!-- Card calculator - for: monthly payment -->
@@ -41,23 +42,31 @@
                 <br>
                 <label for="loan-payment">Loan amount:</label>
                 <span class="min-max-range">30.000 E</span>
-                <input type="range" id="loan-payment" name="loan-payment" min="30000" max="500000" value="30000" step="5000">
+                <input type="range" id="loan-payment" name="loan-payment" min="30000" max="500000" value="30000" step="5000"><span id="current-loan-payment"></span>
                 <span class="min-max-range">500.000 E</span>
                 <br>
                 <label for="interest-payment">Interest (%) :</label>
                 <span class="min-max-range">1 %</span>
-                <input type="range" id="interest-payment" name="interest-payment" min="1" max="8" value="1" step="0.5">
+                <input type="range" id="interest-payment" name="interest-payment" min="1" max="8" value="1" step="0.5"><span id="current-interest-payment"></span>
                 <span class="min-max-range">8 %</span>
                 <br>
                 <label for="duration-payment">Duration (years) :</label>
                 <span class="min-max-range">5 years</span>
-                <input type="range" id="duration-payment" name="duration-payment" min="5" max="35" value="5" step="1">
+                <input type="range" id="duration-payment" name="duration-payment" min="5" max="35" value="5" step="1"><span id="current-duration-payment"></span>
                 <span class="min-max-range">35 years</span>
                 <br>
                 <button>Calculate</button>
+                <span>Result:</span><input type="text">
             </form>
         </div>
     </div>
-    <div id="feature"></div>
+    <div id="feature">
+        <p>Statistics for interest rates in the past three years: </p>
+        <ul>
+            <li>2024</li>
+            <li>2023</li>
+            <li>2022</li>
+        </ul>
+    </div>
 </body>
 </html>
