--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="app.js" defer></script>
     <title>Mortgage Calculator</title>
 </head>
 <body>
@@ -60,13 +62,15 @@
             </form>
         </div>
     </div>
-    <div id="feature">
-        <p>Statistics for interest rates in the past three years: </p>
-        <ul>
-            <li>2024</li>
-            <li>2023</li>
-            <li>2022</li>
-        </ul>
-    </div>
+    <footer>
+        <div id="feature">
+            <p>Statistics for interest rates in the past three years: </p>
+            <ul>
+                <li>2024</li>
+                <li>2023</li>
+                <li>2022</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
