--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                 <p class="italic"><i>How long will it take to pay it off?</i></p>
                 <br>
                 <label class="label-duration" for="loan-duration">Loan Amount:</label>
-                <span class="min-max-range">30.000 E - 500.000 E</span><span id="current-loan-duration"></span>
+                <span class="min-max-range"><i class="examples-range">(30.000 - 500.000 E)</i></span><span id="current-loan-duration" class="display-slider-input"></span>
                 <input type="range" id="loan-duration" name="loan-duration" min="30000" max="500000" value="30000" step="5000">
                 <br>
                 <label class="label-duration" for="interest-dutarion">Interest (%) :</label>
-                <span class="min-max-range">1 % - 8 %</span><span id="current-interest-dutarion"></span>
+                <span class="min-max-range"><i class="examples-range">(1 - 8 %)</i></span><span id="current-interest-dutarion" class="display-slider-input"></span>
                 <input type="range" id="interest-dutarion" name="interest-dutarion" min="1" max="8" value="1" step="0.5">
                 <br>
                 <label class="label-duration" for="payment-duration">Monthly payment:</label>
-                <span class="min-max-range">100 E - 6000 E</span><span id="current-payment-duration"></span>
+                <span class="min-max-range"><i class="examples-range">(100 - 6000 E)</i></span><span id="current-payment-duration" class="display-slider-input"></span>
                 <input type="range" id="payment-duration" name="payment-duration" min="100" max="6000" value="100" step="100">
                 <br>
                 <div class="calculate-result">
@@ -43,15 +43,15 @@
                 <p class="italic"><i>How much will the monthly payment be?</i></p>
                 <br>
                 <label class="label-payment" for="loan-payment">Loan amount:</label>
-                <span class="min-max-range">30.000 E - 500.000 E</span><span id="current-loan-payment"></span>
+                <span class="min-max-range"><i class="examples-range">(30.000 - 500.000 E)</i></span><span id="current-loan-payment" class="display-slider-input"></span>
                 <input type="range" id="loan-payment" name="loan-payment" min="30000" max="500000" value="30000" step="5000">
                 <br>
                 <label class="label-payment" for="interest-payment">Interest (%) :</label>
-                <span class="min-max-range">1 % - 8 %</span><span id="current-interest-payment"></span>
+                <span class="min-max-range"><i class="examples-range">(1 - 8 %)</i></span><span id="current-interest-payment" class="display-slider-input"></span>
                 <input type="range" id="interest-payment" name="interest-payment" min="1" max="8" value="1" step="0.5">
                 <br>
                 <label class="label-payment" for="duration-payment">Duration (years) :</label>
-                <span class="min-max-range">5 years - 35 years</span><span id="current-duration-payment"></span>
+                <span class="min-max-range"><i class="examples-range">(5 - 35 years)</i></span><span id="current-duration-payment" class="display-slider-input"></span>
                 <input type="range" id="duration-payment" name="duration-payment" min="5" max="35" value="5" step="1">
                 <br>
                 <div class="calculate-result">
