--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <span class="min-max-range"><i class="examples-range">(30.000 - 500.000 E)</i></span><span id="current-loan-duration" class="display-slider-input"></span>
                 <input type="range" id="loan-duration" name="loan-duration" min="30000" max="500000" value="30000" step="5000">
                 <br>
-                <label class="label-duration" for="interest-dutarion">Interest (%) :</label>
-                <span class="min-max-range"><i class="examples-range">(1 - 8 %)</i></span><span id="current-interest-dutarion" class="display-slider-input"></span>
-                <input type="range" id="interest-dutarion" name="interest-dutarion" min="1" max="8" value="1" step="0.5">
+                <label class="label-duration" for="interest-duration">Interest (%) :</label>
+                <span class="min-max-range"><i class="examples-range">(1 - 8 %)</i></span><span id="current-interest-duration" class="display-slider-input"></span>
+                <input type="range" id="interest-duration" name="interest-duration" min="1" max="8" value="1" step="0.5">
                 <br>
                 <label class="label-duration" for="payment-duration">Monthly payment:</label>
                 <span class="min-max-range"><i class="examples-range">(100 - 6000 E)</i></span><span id="current-payment-duration" class="display-slider-input"></span>
