--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <br>
                 <div class="calculate-result">
                     <button type="submit" class="calculate-button">Calculate</button>
-                    <span class="label-result">Result:</span><input type="text" id="input-result-duration" class="input-result">
+                    <span class="label-result">Result:</span><span id="input-result-duration" class="input-result">..duration..</span><!-- <input type="text" id="input-result-duration" class="input-result"> -->
                 </div>
             </form>
         </div>
