Feat: implementation of calc. formula for payment

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <br>
                 <div class="calculate-result">
                     <button type="submit" class="calculate-button">Calculate</button>
-                    <span class="label-result">Result:</span><input type="text" id="input-result-payment" class="input-result">
+                    <span class="label-result">Result:</span><span id="input-result-payment" class="input-result">..quantity..</span><!-- <input type="text" id="input-result-payment" class="input-result"> -->
                 </div>
             </form>
         </div>
