Style: styling background, cards and buttons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="italic"><i>How much will the monthly payment be?</i></p>
                 <br>
                 <label class="label-payment" for="loan-payment">Loan amount:</label>
-                <span class="min-max-range"><i class="examples-range">(30.000 - 500.000 E)</i></span><span id="current-loan-payment" class="display-slider-input"></span>
+                <span class="min-max-range"><i class="examples-range">(30.000 - 500.000)</i></span><span id="current-loan-payment" class="display-slider-input"></span>
                 <input type="range" id="loan-payment" name="loan-payment" min="30000" max="500000" value="30000" step="5000">
                 <br>
                 <label class="label-payment" for="interest-payment">Interest (%) :</label>
