--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Mortgage Calculator</title>
 </head>
 <body>
@@ -66,13 +67,8 @@
         </div>
     </div>
     <footer>
-        <div id="feature">
-            <p>Statistics for interest rates in the past three years: </p>
-            <ul>
-                <li>2024</li>
-                <li>2023</li>
-                <li>2022</li>
-            </ul>
+        <div class="my-chart">
+            <canvas id="myChart"></canvas>
         </div>
         <div class="credit-link">
             <a href="https://www.svgbackgrounds.com/category/gradient/">Gradient Backgrounds by SVGBackgrounds.com</a>
