Styles: adding more breakpoints - media queries

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         </div>
     </div>
     <footer>
-        <div class="my-chart">
+        <div>
+            <p class="my-chart">Statistics for average interest rate per year</p>
             <canvas id="myChart"></canvas>
         </div>
         <div class="credit-link">
