Feat: add reset button and implementing functionality to it

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                         <span class="label-result">Result:</span><span id="input-result-duration" class="input-result">..duration..</span><!-- <input type="text" id="input-result-duration" class="input-result"> -->
                     </div>
                 </div>
+                <div class="reset">
+                    <button type="button" id="resetDuration" class="reset-button">Reset</button>
+                </div>
             </form>
         </div>
         <!-- Card calculator - for: monthly payment -->
@@ -62,6 +65,9 @@
                     <div class="result-group">
                         <span class="label-result">Result:</span><span id="input-result-payment" class="input-result">..quantity..</span><!-- <input type="text" id="input-result-payment" class="input-result"> -->
                     </div>
+                </div>
+                <div class="reset">
+                    <button type="button" id="resetPayment" class="reset-button">Reset</button>
                 </div>
             </form>
         </div>
